<resources>
    <string name="app_name">NextGitter</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="button_search">button search</string>
    <string name="action_bar">action bar</string>
    <string name="back">back</string>
    <string name="default_name">404</string>
    <string name="default_repository">0 Repository</string>
    <string name="default_followers">0 Followers</string>
    <string name="default_following">0 Following</string>
    <string name="icon_repository">icon repository</string>
    <string name="icon_location">icon location</string>
    <string name="icon_company">icon company</string>
    <string name="icon_follow">icon follow</string>
    <string name="tab1">Followers</string>
    <string name="tab2">Following</string>
    <string name="icon_favorite">icon favorite</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="floating_btn">button for check favorite user list</string>
    <string name="set_notifier">Set notifier</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="details">Details</string>
</resources>