<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <ImageView
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:contentDescription="@string/action_bar"
        android:src="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/github_logo"
        app:layout_constraintBottom_toBottomOf="@+id/bar"
        app:layout_constraintEnd_toEndOf="@+id/bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar"
        tools:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/default_name"
        app:layout_constraintBottom_toTopOf="@+id/tusername"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toTopOf="@+id/img_avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:text="devianwahyu" />

    <ImageView
        android:id="@+id/ic_location"
        android:layout_width="25dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toTopOf="@+id/ic_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/icon_location" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/default_name"
        app:layout_constraintBottom_toBottomOf="@+id/ic_location"
        app:layout_constraintStart_toEndOf="@+id/ic_location"
        app:layout_constraintTop_toTopOf="@+id/ic_location" />

    <ImageView
        android:id="@+id/ic_company"
        android:layout_width="25dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_company"
        app:layout_constraintBottom_toTopOf="@+id/ic_repository"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_location"
        android:contentDescription="@string/icon_company" />

    <ImageView
        android:id="@+id/ic_repository"
        android:layout_width="25dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_folder"
        app:layout_constraintBottom_toTopOf="@+id/ic_follow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_company"
        android:contentDescription="@string/icon_repository" />

    <TextView
        android:id="@+id/repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/default_repository"
        app:layout_constraintBottom_toBottomOf="@+id/ic_repository"
        app:layout_constraintStart_toEndOf="@+id/ic_repository"
        app:layout_constraintTop_toTopOf="@+id/ic_repository" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/default_name"
        app:layout_constraintBottom_toBottomOf="@+id/ic_company"
        app:layout_constraintStart_toEndOf="@+id/ic_company"
        app:layout_constraintTop_toTopOf="@+id/ic_company" />

    <TextView
        android:id="@+id/follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/default_followers"
        app:layout_constraintBottom_toBottomOf="@+id/ic_follow"
        app:layout_constraintStart_toEndOf="@+id/ic_follow"
        app:layout_constraintTop_toTopOf="@+id/ic_follow" />

    <ImageView
        android:id="@+id/ic_follow"
        android:layout_width="25dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_repository"
        android:contentDescription="@string/icon_follow" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/default_following"
        app:layout_constraintBottom_toBottomOf="@+id/follower"
        app:layout_constraintStart_toEndOf="@+id/follower"
        app:layout_constraintTop_toTopOf="@+id/follower" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_follow"
        app:tabTextColor="@color/primary_color" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

</androidx.constraintlayout.widget.ConstraintLayout>